solved overflow-x

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -3,12 +3,15 @@
 
 html, body, #root {
     height: 100%;
-    overflow-x: hidden;
     color: var(--white-text);
     font-weight: 400;
     font-style: normal;
-    font-family: var(--font-family-base);
- 
+    font-family: var(--font-family-base); 
+  }
+
+  body {
+    max-width: 100vw;
+    overflow-x: hidden;
   }
 
 * {
